--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
  </head>
  <body>
   <center><h1><a href="https://ironsun.wixsite.com/ironsun">Red Ruby Rain</a></h1></center>
-  <center><img src="./img/666.png" alt="Red Rubies Rain"></center>
+  <center><img src="./img/666.png" alt="Red Ruby Rain"></center>
  </body>
 </html>
