--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
- <head>
-   <title>Red Ruby Rain</title>
-   <meta charset="utf-8">
- </head>
- <body>
-  <center><h1><a href="https://ironsun.wixsite.com/ironsun">Red Ruby Rain</a></h1></center>
-  <center><img src="./img/666.png" alt="Red Ruby Rain"></center>
- </body>
+<head>
+<title>Red Ruby Rain</title>
+<meta charset="utf-8">
+<link href="./style.css" rel="stylesheet">
+</head>
+<body>
+<div class="fullwidth-bg">
+	<div class="video-layer"><h1></h1></div>
+		<video loop muted autoplay poster="./Media/video-bg-alt.jpg" class="fullscreen-bg__video">
+		<source src="./Media/background_video.mp4" type="video/mp4">
+		</video>
+</div>
+</body>
 </html>
