--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 <div class="fullwidth-bg">
 	<div class="video-layer"><h1></h1></div>
-		<video loop muted autoplay poster="./Media/video-bg-alt.jpg" class="fullscreen-bg__video">
-		<source src="./Media/background_video.mp4" type="video/mp4">
+		<video loop muted autoplay poster="./media/video-bg-alt.jpg" class="fullscreen-bg__video">
+		<source src="./media/background_video.mp4" type="video/mp4">
 		</video>
 </div>
 </body>
